The db context is now transient and most of the errors related to simultaneous access to the context are gone. All the functions appear to work normally, as they used to.

--- a/Components/Pages/AccountPage.razor
+++ b/Components/Pages/AccountPage.razor
@@ -224,7 +224,7 @@ else
         if (!string.IsNullOrEmpty(ComponentQuery)
             && Enum.TryParse<AccountComponent>(ComponentQuery, true, out var comp))
         {
-            if (user == null)
+            if (user?.Identity?.IsAuthenticated != true)
             {
                 CurrentComponent = AccountComponent.Profile;
                 return;
