Tried fixing all the little bugs related to schedule management bullshit. Tests are added to the main project. This is the final version. I very much hope so.

--- a/Components/Pages/Complaints.razor
+++ b/Components/Pages/Complaints.razor
@@ -1,5 +1,4 @@
-﻿@page "/admin/complaints"
-@using barberchainAPI.Data
+﻿@using barberchainAPI.Data
 @inject BarberchainDbContext Context
 
 <MudPaper Class="pa-4" Elevation="4">
