--- a/Components/Pages/PhoneOrderPlacement.razor
+++ b/Components/Pages/PhoneOrderPlacement.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Security.Claims
 @using barberchainAPI.Functional.Services
+@using barberchainAPI.Data;
 @inject IDialogService DialogService
 @inject NavigationManager Navigation
 @inject IProfileService ProfileService
